--- a/PnC/CartPolePnC/CMakeLists.txt
+++ b/PnC/CartPolePnC/CMakeLists.txt
@@ -2,5 +2,6 @@ file(GLOB_RECURSE srcs "*.cpp" "*.hpp")
 
 add_library(CartPolePnC SHARED ${srcs})
 target_link_libraries(CartPolePnC ${DART_LIBRARIES}
-                                 myRobotSystem
-                                 myUtils)
+                                  myRobotSystem
+                                  myUtils
+                                  drake::drake)
