--- a/Simulator/CartPole/CMakeLists.txt
+++ b/Simulator/CartPole/CMakeLists.txt
@@ -1,6 +1,6 @@
 file(GLOB srcs "*.cpp" "*.hpp")
 
-add_executable(cart_pole ${srcs})
-target_link_libraries(cart_pole ${DART_LIBRARIES}
-                                CartPolePnC
-                                myUtils)
+add_executable(run_cart_pole ${srcs})
+target_link_libraries(run_cart_pole ${DART_LIBRARIES}
+                                    CartPolePnC
+                                    myUtils)
