--- a/PnC/CMakeLists.txt
+++ b/PnC/CMakeLists.txt
@@ -1,4 +1,4 @@
+add_subdirectory(CartPolePnC)
+add_subdirectory(DracoPnC)
 add_subdirectory(Contact)
 add_subdirectory(WBC)
-add_subdirectory(CartPolePnC)
-#add_subdirectory(DracoPnC)
