--- a/Simulator/Draco/CMakeLists.txt
+++ b/Simulator/Draco/CMakeLists.txt
@@ -2,5 +2,5 @@ file(GLOB srcs "*.cpp" "*.hpp")
 
 add_executable(run_draco ${srcs})
 target_link_libraries(run_draco ${DART_LIBRARIES}
-                                #DracoPnC
+                                DracoPnC
                                 myUtils)
