--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -1,4 +1,3 @@
-IsRecord: false
+IsRecord: true
 IsVisualizeTrajectory: false
-#IsVisualizeTrajectory: true
 TrajectoryFile: dircol_swing_up_1_4_1.txt
