--- a/PnC/DracoPnC/CMakeLists.txt
+++ b/PnC/DracoPnC/CMakeLists.txt
@@ -1,9 +1,8 @@
 file(GLOB_RECURSE srcs "*.cpp" "*.hpp")
 
 add_library(DracoPnC SHARED ${srcs})
-target_link_libraries(DracoPnC ${DART_LIBRARIES}
+target_link_libraries(DracoPnC drake::drake
+                               ${DART_LIBRARIES}
                                myRobotSystem
                                myUtils
-                               myWBC
-                               drake::drake
-                               ${MOSEK_LIBRARIES})
+                               myWBC)
