--- a/PnC/DracoPnC/CMakeLists.txt
+++ b/PnC/DracoPnC/CMakeLists.txt
@@ -5,7 +5,8 @@ target_link_libraries(DracoPnC drake::drake
                                ${DART_LIBRARIES}
                                myRobotSystem
                                myUtils
-                               myWBC)
+                               myWBC
+                               myCentPlanner)
 
 add_executable(gen_draco_offline_traj OfflineTrajGen/src.cpp)
 target_link_libraries(gen_draco_offline_traj DracoPnC)
