--- a/Config/Draco/CENTROID_PLANNER.yaml
+++ b/Config/Draco/CENTROID_PLANNER.yaml
@@ -12,7 +12,7 @@ initial_robot_configuration:
     eef_frc_lf: [0.0, 0.0, 0.5]
     eef_frc_rh: [0.0, 0.0, 0.0]
     eef_frc_lh: [0.0, 0.0, 0.0]
-  eef_pose:
+  eef_pose: # activation, pos, quat
     eef_rf: [1.0,    0.086, 0.15, -0.92,    1.0, 0.0, 0.0, 0.0]
     eef_lf: [1.0,   -0.086, 0.15, -0.92,    1.0, 0.0, 0.0, 0.0]
     eef_rh: [0.0,    0.400, 0.30,  0.00,    0.0, -0.70711, 0.70711, 0.0 ]
@@ -26,16 +26,16 @@ contact_plan:
   ######################
 
   num_contacts: [3, 3, 0, 0]
-  effcnt_rf:
+  eefcnt_rf:
     cnt0: [0.0, 1.0,    0.086, 0.15, -0.92,    1.0, 0.0, 0.0, 0.0,           1.0]
     cnt1: [2.0, 4.5,    0.500, 0.45, -0.76,    0.9689, 0.0, -0.2474, 0.0,    1.0]
     cnt2: [6.0, 9.9,    0.450, 0.98, -0.27,    1.0, 0.0, 0.0, 0.0,           1.0]
-  effcnt_lf:
+  eefcnt_lf:
     cnt0: [0.0, 2.5,   -0.086, 0.15, -0.92,    1.0, 0.0, 0.0, 0.0,           1.0]
     cnt1: [4.0, 6.5,   -0.080, 0.70, -0.52,    0.96891, 0.0,  0.2474, 0.0,   1.0]
     cnt2: [8.5, 9.9,   -0.080, 1.25, -0.25,    1.0, 0.0, 0.0, 0.0,           1.0]
-  effcnt_rh:
-  effcnt_lh:
+  eefcnt_rh:
+  eefcnt_lh:
 
 
 planner_variables:
@@ -71,10 +71,10 @@ planner_variables:
   friction_coeff: 1.0
   friction_cone: LinearCone  # Types: LinearCone, SocCone #
   torque_range: [-200.0, 200.0]
-  eff_offset_rf: [ 0.00,  0.00,  0.00]
-  eff_offset_lf: [ 0.00,  0.00,  0.00]
-  eff_offset_rh: [ 0.20,  0.00,  0.48]
-  eff_offset_lh: [-0.20,  0.00,  0.48]
+  eef_offset_rf: [ 0.00,  0.00,  0.00]
+  eef_offset_lf: [ 0.00,  0.00,  0.00]
+  eef_offset_rh: [ 0.20,  0.00,  0.48]
+  eef_offset_lh: [-0.20,  0.00,  0.48]
   cop_range_rf: [-0.03,  0.03, -0.08,  0.08]
   cop_range_lf: [-0.03,  0.03, -0.08,  0.08]
   cop_range_rh: [-0.03,  0.03, -0.03,  0.03]
