--- a/PnC/CentroidPlanner/CMakeLists.txt
+++ b/PnC/CentroidPlanner/CMakeLists.txt
@@ -3,4 +3,5 @@ file(GLOB_RECURSE srcs "*.cpp" "*.hpp")
 add_library(myCentPlanner SHARED ${srcs})
 
 target_link_libraries(myCentPlanner myUtils
-                                    myContact)
+                                    myContact
+                                    myConicSolver)
