--- a/PnC/DracoPnC/CMakeLists.txt
+++ b/PnC/DracoPnC/CMakeLists.txt
@@ -9,4 +9,5 @@ target_link_libraries(DracoPnC drake::drake
                                myCentPlanner)
 
 add_executable(gen_draco_offline_traj OfflineTrajGen/src.cpp)
-target_link_libraries(gen_draco_offline_traj DracoPnC)
+target_link_libraries(gen_draco_offline_traj DracoPnC
+                                             myUtils)
