kinematic optimizer start

--- a/PnC/DracoPnC/CMakeLists.txt
+++ b/PnC/DracoPnC/CMakeLists.txt
@@ -1,4 +1,7 @@
-file(GLOB_RECURSE srcs "*.cpp" "*.hpp" REMOVE OfflineTrajGen/src.cpp)
+file(GLOB_RECURSE srcs "*.cpp" "*.hpp")
+
+list(REMOVE_ITEM srcs ${CMAKE_CURRENT_SOURCE_DIR}/OfflineTrajGen/CentroidDynOpt.cpp
+                      ${CMAKE_CURRENT_SOURCE_DIR}/OfflineTrajGen/KinematicOpt.cpp)
 
 add_library(DracoPnC SHARED ${srcs})
 target_link_libraries(DracoPnC drake::drake
@@ -8,6 +11,8 @@ target_link_libraries(DracoPnC drake::drake
                                myWBC
                                myCentPlanner)
 
-add_executable(gen_draco_offline_traj OfflineTrajGen/src.cpp)
-target_link_libraries(gen_draco_offline_traj DracoPnC
-                                             myUtils)
+add_executable(cent_dyn_opt OfflineTrajGen/CentroidDynOpt.cpp)
+target_link_libraries(cent_dyn_opt DracoPnC)
+
+add_executable(kin_opt OfflineTrajGen/KinematicOpt.cpp)
+target_link_libraries(kin_opt DracoPnC)
