--- a/PnC/CMakeLists.txt
+++ b/PnC/CMakeLists.txt
@@ -3,3 +3,6 @@ add_subdirectory(DracoPnC)
 add_subdirectory(Contact)
 add_subdirectory(WBC)
 add_subdirectory(CentroidPlanner)
+if(GTEST_FOUND)
+  add_subdirectory(Unittest)
+endif()
