--- a/Config/Draco/INTERFACE.yaml
+++ b/Config/Draco/INTERFACE.yaml
@@ -1,3 +1,4 @@
-TestName: WholeBodyControllerTest
+#TestName: WholeBodyControllerTest
 #TestName: SymExpValidationTest
 #TestName: KinematicOptimizationTest
+TestName: InvKinTest
