--- a/PnC/Unittest/CMakeLists.txt
+++ b/PnC/Unittest/CMakeLists.txt
@@ -15,3 +15,12 @@ target_link_libraries(test_inv_kin drake::drake
                                    gtest
                                    gtest_main)
 add_test(NAME test_inv_kin COMMAND test_inv_kin)
+
+add_executable(test_draco TestDraco.cpp)
+target_link_libraries(test_draco drake::drake
+                                 ${DART_LIBRARIES}
+                                 myRobotSystem
+                                 myUtils
+                                 gtest
+                                 gtest_main)
+add_test(NAME test_draco COMMAND test_draco)
