fixed draco added

--- a/PnC/CMakeLists.txt
+++ b/PnC/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(CartPolePnC)
 add_subdirectory(DracoPnC)
+add_subdirectory(FixedDracoPnC)
 add_subdirectory(Contact)
 add_subdirectory(WBC)
 add_subdirectory(CentroidPlanner)
