cent+kin test added

--- a/Config/Draco/INTERFACE.yaml
+++ b/Config/Draco/INTERFACE.yaml
@@ -1,4 +1,4 @@
 #TestName: WholeBodyControllerTest
 #TestName: SymExpValidationTest
-#TestName: KinematicOptimizationTest
-TestName: InvKinTest
+TestName: CentroidKinematicOptimizationTest 
+#TestName: InvKinTest
