--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,8 @@ include_directories("${PROJECT_SOURCE_DIR}/Utils")
 include_directories("${PROJECT_SOURCE_DIR}/PnC")
 include_directories("${PROJECT_SOURCE_DIR}/PnC/Contact")
 include_directories("${PROJECT_SOURCE_DIR}/PnC/WBC")
-include_directories("${PROJECT_SOURCE_DIR}/PnC/CentroidPlanner")
+include_directories("${PROJECT_SOURCE_DIR}/PnC/PlannerSet/CentroidPlanner")
+include_directories("${PROJECT_SOURCE_DIR}/PnC/PlannerSet/PreComputedPlanner")
 include_directories("${PROJECT_SOURCE_DIR}/PnC/WBC/WBLC")
 include_directories("${PROJECT_SOURCE_DIR}/PnC/Trajectory")
 include_directories("${PROJECT_SOURCE_DIR}/ExternalSource/Yaml/include")
