--- a/PnC/CMakeLists.txt
+++ b/PnC/CMakeLists.txt
@@ -3,7 +3,7 @@ add_subdirectory(DracoPnC)
 add_subdirectory(FixedDracoPnC)
 add_subdirectory(Contact)
 add_subdirectory(WBC)
-add_subdirectory(CentroidPlanner)
+add_subdirectory(PlannerSet)
 if(GTEST_FOUND)
   add_subdirectory(Unittest)
 endif()
