--- a/PnC/PlannerSet/CMakeLists.txt
+++ b/PnC/PlannerSet/CMakeLists.txt
@@ -1,2 +1,8 @@
-add_subdirectory(CentroidPlanner)
-add_subdirectory(PreComputedPlanner)
+file(GLOB_RECURSE srcs "*.cpp" "*.hpp")
+
+add_library(myPlanner SHARED ${srcs})
+
+target_link_libraries(myPlanner myUtils
+                                myContact
+                                myConicSolver
+                                myRobotSystem)
