--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,7 @@ include_directories("${PROJECT_SOURCE_DIR}/PnC")
 include_directories("${PROJECT_SOURCE_DIR}/PnC/Contact")
 include_directories("${PROJECT_SOURCE_DIR}/PnC/WBC")
 include_directories("${PROJECT_SOURCE_DIR}/PnC/PlannerSet/CentroidPlanner")
+include_directories("${PROJECT_SOURCE_DIR}/PnC/PlannerSet/InvKinPlanner")
 include_directories("${PROJECT_SOURCE_DIR}/PnC/PlannerSet/PreComputedPlanner")
 include_directories("${PROJECT_SOURCE_DIR}/PnC/WBC/WBLC")
 include_directories("${PROJECT_SOURCE_DIR}/PnC/Trajectory")
