--- a/Config/Draco/SAFETY.yaml
+++ b/Config/Draco/SAFETY.yaml
@@ -3,5 +3,5 @@ home_position: [0., 0., 0.3927, 0.7854, 1.1781, 0., 0., -0.3927, 0.7854, 1.1781]
 #max_position: [0.85, ]
 #max_velocity: [10., 10., 10., 10., 10., 10., 10., 10., 10., 10.]
 #max_jtrq: [20., 20., 20., 20., 20., 20., 20., 20., 20., 20.]
-#max_temperature: [100., 100., 100., 100., 100., 100., 100., 100., 100., 100.]
+max_temperature: [100., 100., 100., 100., 100., 100., 100., 100., 100., 100.]
 
