--- a/Config/FixedDraco/SIMULATION.yaml
+++ b/Config/FixedDraco/SIMULATION.yaml
@@ -1,2 +1,8 @@
 IsRecord: false
-IsVisualizeTrajectory: false
+
+control_configuration:
+
+  kp: [100 , 100 , 100 , 100 , 50 , 100 , 100 , 100 , 100 , 50]
+  kd: [5   , 5   , 5   , 5   , 2  , 5   , 5   , 5   , 5   , 2]
+  #kp: [0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0]
+  #kd: [0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0]
