admittance control & low level position control added

--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -1,3 +1,8 @@
 is_record: false
 
-release_time: 4.5
+control_configuration:
+
+  kp: [100 , 100 , 100 , 100 , 50 , 100 , 100 , 100 , 100 , 50]
+  kd: [5   , 5   , 5   , 5   , 2  , 5   , 5   , 5   , 5   , 2]
+  #kp: [0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0]
+  #kd: [0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0]
