before testing force control in fixed configuration & before pass it to apptronik

--- a/Config/FixedDraco/TEST/JOINT_TEST.yaml
+++ b/Config/FixedDraco/TEST/JOINT_TEST.yaml
@@ -1,9 +1,37 @@
 sinusoidal_configuration:
 
   transition_time: 1.0
-  mid: [0.0, 0.0, -0.8, 0.82, 1.57, 0.0, 0.0, -0.8, 0.82, 1.57]
-  amp: [0.0, 0.0, 0.3, 0.3, 0.2, 0.0, 0.0, -0.3, -0.3, 0.2]
-  freq: [0.0, 0.0, 0.3, 0.3, 0.2, 0.0, 0.0, 0.3, 0.3, 0.2]
+
+  ## normal sinusoid
+  mid: [0.0, 0.0, -0.8, 0.9, 1.57, 0.0, 0.0, -0.8, 0.9, 1.57]
+  amp: [0.0, 0.0, 0.3, 0.2, 0.0, 0.0, 0.0, -0.3, -0.2, 0.0]
+  freq: [0.0, 0.0, 0.7, 0.7, 0.0, 0.0, 0.0, 0.7, 0.7, 0.0]
+
+  ## ROM hip yaw
+  #mid: [0.0  , 0.0 , 0.0 , 0.0 , 1.57 , 0.0   , 0.0 , 0.0 , 0.0 , 1.57]
+  #amp: [0.65 , 0.0 , 0.0 , 0.0 , 0.0  , -0.65 , 0.0 , 0.0 , 0.0 , 0.0]
+  #freq: [0.2 , 0.0 , 0.0 , 0.0 , 0.0  , 0.2   , 0.0 , 0.0 , 0.0 , 0.0]
+
+  ## ROM hip roll
+  #mid: [0.0  , 0.325 , 0.0 , 0.0 , 1.57 , 0.0   , -0.325 , 0.0 , 0.0 , 1.57]
+  #amp: [0.0 , 0.475 , 0.0 , 0.0 , 0.0  , 0.0 , 0.475 , 0.0 , 0.0 , 0.0]
+  #freq: [0.0 , 0.2 , 0.0 , 0.0 , 0.0  , 0.0   , 0.2 , 0.0 , 0.0 , 0.0]
+
+  ## ROM hip pitch
+  #mid: [-0.7355 , 0.0 , -0.125 , 1.2689 , 1.57 , 0.3290 , 0.0 , -0.125 , 1.2689 , 1.57]
+  #amp: [0.0     , 0.0 , 0.925  , 0.0    , 0.0  , 0.0    , 0.0 , -0.925  , 0.0    , 0.0]
+  #freq: [0.0    , 0.0 , 0.2    , 0.0    , 0.0  , 0.0    , 0.0 , 0.2    , 0.0    , 0.0]
+
+  ## ROM knee
+  #mid: [0  , 0 , -0.7 , 1.1  , 1.57 , 0   , 0   , -0.7 , 1.1 , 1.57]
+  #amp: [0  , 0 , 0    , -0.8 , 0.0  , 0.0 , 0.0 , 0.0  , 0.8 , 0.0]
+  #freq: [0 , 0 , 0    , 0.2  , 0.0  , 0.0 , 0.0 , 0.0  , 0.2 , 0.0]
+
+  ## ROM Ankle
+  #mid: [0  , 0 , -0.7 , 1.1 , 1.29 , 0   , 0   , -0.7 , 1.1 , 1.29]
+  #amp: [0  , 0 , 0    , 0.0 , 0.76 , 0.0 , 0.0 , 0.0  , 0.0 , 0.76]
+  #freq: [0 , 0 , 0    , 0.0 , 0.2  , 0.0 , 0.0 , 0.0  , 0.0 , -0.2]
+
 
 control_configuration:
 
