--- a/Config/Draco/LOW_LEVEL_CONFIG.yaml
+++ b/Config/Draco/LOW_LEVEL_CONFIG.yaml
@@ -6,19 +6,79 @@
 #t_kd          : [0  , 0   , 0   , 0   , 0   , 0  , 0   , 0   , 0   , 0]
 #en_auto_kd    : [1  , 1   , 1   , 1   , 1   , 1  , 1   , 1   , 1   , 1]
 #en_dob        : [0  , 0   , 0   , 0   , 0   , 0  , 0   , 0   , 0   , 0]
-#current_limit : [10 , 10  , 10  , 10  , 10  , 10 , 10  , 10  , 10  , 10]
+#current_limit : [5 , 10  , 10  , 10  , 3  , 5 , 10  , 10  , 10  , 3]
 
 ####### Weak Gain
 
-#jp_kp         : [40 , 50 , 50 , 50 , 9   , 40 , 50 , 50 , 50 , 9]
-#jp_kd         : [2  , 3  , 3  , 3  , 0.4 , 2  , 3  , 3  , 3  , 0.4]
+#jp_kp         : [40 , 70 , 70 , 70 , 9   , 40 , 70 , 70 , 70 , 9]
+#jp_kd         : [2  , 5  , 5  , 5  , 0.4 , 2  , 5  , 5  , 5  , 0.4]
 #t_kp          : [0  , 0  , 0  , 0  , 0   , 0  , 0  , 0  , 0  , 0]
 #t_kd          : [0  , 0  , 0  , 0  , 0   , 0  , 0  , 0  , 0  , 0]
 #en_auto_kd    : [1  , 1  , 1  , 1  , 1   , 1  , 1  , 1  , 1  , 1]
 #en_dob        : [0  , 0  , 0  , 0  , 0   , 0  , 0  , 0  , 0  , 0]
-#current_limit : [2  , 2  , 2  , 2  , 2   , 2  , 2  , 2  , 2  , 2]
+#current_limit : [3  , 7  , 7  , 7  , 1   , 3  , 7  , 7  , 7  , 1]
 
 ####### Zero Gain -- gravity compensation
+
+#jp_kp         : [0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0]
+#jp_kd         : [0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0]
+#t_kp          : [0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0]
+#t_kd          : [0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0]
+#en_auto_kd    : [1 , 1 , 1 , 1 , 1 , 1 , 1 , 1 , 1 , 1]
+#en_dob        : [0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0]
+#current_limit : [5 , 5 , 5 , 5 , 5 , 5 , 5 , 5 , 5 , 5]
+
+####### ROM Test Gain -- hip yaw
+
+#jp_kp         : [40 , 0 , 0 , 0 , 0 , 40 , 0 , 0 , 0 , 0]
+#jp_kd         : [2  , 0 , 0 , 0 , 0 , 2  , 0 , 0 , 0 , 0]
+#t_kp          : [0  , 0 , 0 , 0 , 0 , 0  , 0 , 0 , 0 , 0]
+#t_kd          : [0  , 0 , 0 , 0 , 0 , 0  , 0 , 0 , 0 , 0]
+#en_auto_kd    : [1  , 1 , 1 , 1 , 1 , 1  , 1 , 1 , 1 , 1]
+#en_dob        : [0  , 0 , 0 , 0 , 0 , 0  , 0 , 0 , 0 , 0]
+#current_limit : [1  , 1 , 1 , 1 , 1 , 1  , 1 , 1 , 1 , 1]
+
+####### ROM Test Gain -- hip roll
+
+#jp_kp         : [0 , 50 , 0 , 0 , 0 , 0 , 50 , 0 , 0 , 0]
+#jp_kd         : [0 , 3  , 0 , 0 , 0 , 0 , 3  , 0 , 0 , 0]
+#t_kp          : [0 , 0  , 0 , 0 , 0 , 0 , 0  , 0 , 0 , 0]
+#t_kd          : [0 , 0  , 0 , 0 , 0 , 0 , 0  , 0 , 0 , 0]
+#en_auto_kd    : [1 , 1  , 1 , 1 , 1 , 1 , 1  , 1 , 1 , 1]
+#en_dob        : [0 , 0  , 0 , 0 , 0 , 0 , 0  , 0 , 0 , 0]
+#current_limit : [1 , 3, 1 , 1 , 1 , 1 , 3  , 1 , 1 , 1]
+
+####### ROM Test Gain -- hip pitch
+
+#jp_kp         : [40 , 70 , 70 , 70 , 9   , 40 , 70 , 70 , 70 , 9]
+#jp_kd         : [2  , 5  , 5  , 5  , 0.4 , 2  , 5  , 5  , 5  , 0.4]
+#t_kp          : [0  , 0  , 0  , 0  , 0   , 0  , 0  , 0  , 0  , 0]
+#t_kd          : [0  , 0  , 0  , 0  , 0   , 0  , 0  , 0  , 0  , 0]
+#en_auto_kd    : [1  , 1  , 1  , 1  , 1   , 1  , 1  , 1  , 1  , 1]
+#en_dob        : [0  , 0  , 0  , 0  , 0   , 0  , 0  , 0  , 0  , 0]
+#current_limit : [3  , 7  , 7  , 7  , 1   , 3  , 7  , 7  , 7  , 1]
+
+######### ROM Test Gain -- knee
+
+#jp_kp         : [40 , 70 , 70 , 50 , 9   , 40 , 70 , 70 , 70 , 9]
+#jp_kd         : [2  , 5  , 5  , 3  , 0.4 , 2  , 5  , 5  , 7  , 0.4]
+#t_kp          : [0  , 0  , 0  , 0  , 0   , 0  , 0  , 0  , 0  , 0]
+#t_kd          : [0  , 0  , 0  , 0  , 0   , 0  , 0  , 0  , 0  , 0]
+#en_auto_kd    : [1  , 1  , 1  , 1  , 1   , 1  , 1  , 1  , 1  , 1]
+#en_dob        : [0  , 0  , 0  , 0  , 0   , 0  , 0  , 0  , 0  , 0]
+#current_limit : [3  , 7  , 7  , 7  , 1   , 3  , 7  , 7  , 7  , 1]
+
+######## ROM Test Gain -- Ankle
+
+#jp_kp         : [40 , 70 , 70 , 50 , 9   , 40 , 70 , 70 , 70 , 9]
+#jp_kd         : [2  , 5  , 5  , 3  , 0.4 , 2  , 5  , 5  , 7  , 0.4]
+#t_kp          : [0  , 0  , 0  , 0  , 0   , 0  , 0  , 0  , 0  , 0]
+#t_kd          : [0  , 0  , 0  , 0  , 0   , 0  , 0  , 0  , 0  , 0]
+#en_auto_kd    : [1  , 1  , 1  , 1  , 1   , 1  , 1  , 1  , 1  , 1]
+#en_dob        : [0  , 0  , 0  , 0  , 0   , 0  , 0  , 0  , 0  , 0]
+#current_limit : [3  , 7  , 7  , 7  , 2   , 3  , 7  , 7  , 7  , 2]
+
+######## OSC Test
 
 jp_kp         : [0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0]
 jp_kd         : [0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0]
@@ -26,4 +86,4 @@ t_kp          : [0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0]
 t_kd          : [0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0]
 en_auto_kd    : [1 , 1 , 1 , 1 , 1 , 1 , 1 , 1 , 1 , 1]
 en_dob        : [0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0]
-current_limit : [3 , 3 , 3 , 3 , 3 , 3 , 3 , 3 , 3 , 3]
+current_limit : [1 , 1 , 1 , 1 , 1 , 5 , 5 , 5 , 5 , 3]
