--- a/Config/Draco/INTERFACE.yaml
+++ b/Config/Draco/INTERFACE.yaml
@@ -1,5 +1,6 @@
 #TestName: WholeBodyControllerTest
 #TestName: SymExpValidationTest
-TestName: CentroidKinematicOptimizationTest
+#TestName: CentroidKinematicOptimizationTest
 #TestName: AdmittanceTest
 #TestName: InvKinTest
+TestName: SteppingTest
