--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,7 @@
 *.o
 *.obj
 
-# Precompiled Headers
-*.gch
+# Precompiled Headers *.gch
 *.pch
 
 # Compiled Dynamic libraries
@@ -42,3 +41,4 @@ drake_binary
 *_RESULTS.yaml
 *.pyc
 octave-workspace
+*.m~
