--- a/PnC/PlannerSet/CMakeLists.txt
+++ b/PnC/PlannerSet/CMakeLists.txt
@@ -2,8 +2,11 @@ file(GLOB_RECURSE srcs "*.cpp" "*.hpp")
 
 file(GLOB_RECURSE sources "*.cpp")
 file(GLOB centroid_planner_headers "CentroidPlanner/*.hpp")
+file(GLOB pipm_foot_planner_headers "PIPM_FootPlacementPlanner/*.hpp")
 
-add_library(myPlanner SHARED ${sources} ${centroid_planner_headers})
+add_library(myPlanner SHARED ${sources}
+                             ${centroid_planner_headers}
+                             ${pipm_foot_planner_headers})
 
 target_link_libraries(myPlanner myUtils
                                 myContact
@@ -13,3 +16,5 @@ target_link_libraries(myPlanner myUtils
 install(TARGETS myPlanner DESTINATION "${INSTALL_LIB_DIR}")
 install(FILES ${centroid_planner_headers} DESTINATION
     "${INSTALL_INCLUDE_DIR}/PnC/PlannerSet/CentroidPlanner")
+install(FILES ${pipm_foot_planner_headers} DESTINATION
+    "${INSTALL_INCLUDE_DIR}/PnC/PlannerSet/PIPM_FootPlacementPlanner")
