--- a/Config/Draco/INTERFACE.yaml
+++ b/Config/Draco/INTERFACE.yaml
@@ -1,5 +1,5 @@
-#test_name: joint_test
-test_name: body_test
+test_name: joint_test
+#test_name: body_test
 #test_name: walking_test
 
 jpos_max: [0.72, 0.92, 1.08, 1.95, 2.33, 0.79, 0.47, 1.08, 1.95, 2.33]
