--- a/Config/Draco/CTRL/LEFT_BODY_FOOT_PLANNING_CTRL.yaml
+++ b/Config/Draco/CTRL/LEFT_BODY_FOOT_PLANNING_CTRL.yaml
@@ -6,5 +6,7 @@ default_target_foot_location: [-0.0, 0.13, 0.0]
 kp: [ 150 , 150 , 150 , 150 , 150 , 150 , 150 , 150 , 200, 150 ]
 kd: [ 8   , 8   , 8   , 8   , 8   , 8   , 8   , 8   , 8   , 8 ]
 
-body_pt_offset: [0.06, -0.0]
-foot_landing_offset: [-0.0, 0.]
+#body_pt_offset: [0.06, 0.0]
+#body_pt_offset: [-0.067, -0.0]
+body_pt_offset: [-0.027, 0.00]
+foot_landing_offset: [-0.08, -0.02]
