--- a/Config/Draco/TEST/JOINT_TEST.yaml
+++ b/Config/Draco/TEST/JOINT_TEST.yaml
@@ -1,5 +1,6 @@
-initial_jpos: [0., -0.08, -1.05, 1.51, 0.85, 0., 0.08, -1.05, 1.51, 0.85]
-initialization_time: 5.0
+#initial_jpos: [0., -0.08, -1.05, 1.51, 0.85, 0., 0.08, -1.05, 1.51, 0.85]
+initial_jpos: [0., -0.08, -0.8, 1.6, 0.81, 0., 0.08, -0.8, 1.6, 0.81]
+initialization_time: 3.0
 
 test_duration: 100.32
 
