--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -1,8 +1,9 @@
 is_record: false
 
-hanging_height: 0.8
+#hanging_height: 0.81
+hanging_height: 0.83
 
-release_time: 6
+release_time: 8
 #release_time: 0
 
 initial_configuration: [0, 0, -0.5, 1.8, 1.03, 0, 0, -0.5, 1.8, 1.03]
