--- a/Config/Draco/CTRL/LEFT_BODY_FOOT_PLANNING_CTRL.yaml
+++ b/Config/Draco/CTRL/LEFT_BODY_FOOT_PLANNING_CTRL.yaml
@@ -7,6 +7,8 @@ kp: [ 150 , 150 , 150 , 150 , 150 , 150 , 150 , 150 , 200, 150 ]
 kd: [ 8   , 8   , 8   , 8   , 8   , 8   , 8   , 8   , 8   , 8 ]
 
 #body_pt_offset: [0.06, 0.0]
-#body_pt_offset: [-0.067, -0.0]
-body_pt_offset: [-0.027, 0.00]
-foot_landing_offset: [-0.08, -0.02]
+#body_pt_offset: [-0.027, 0.00]
+#foot_landing_offset: [-0.1, -0.00]
+
+body_pt_offset: [0.0, 0.0]
+foot_landing_offset: [0., 0.0]
