--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -1,8 +1,9 @@
 is_record: false
+#is_record: true
 
 hanging_height: 0.83
 
-release_time: 8
+release_time: 8.0
 #release_time: 0
 
 initial_configuration: [0, 0, -0.5, 1.8, 1.03, 0, 0, -0.5, 1.8, 1.03]
