--- a/ExternalSource/CMakeLists.txt
+++ b/ExternalSource/CMakeLists.txt
@@ -1,3 +1,6 @@
 add_subdirectory(myYaml)
 add_subdirectory(myCDD)
 add_subdirectory(myOptimizer)
+if(USE_PYBIND11)
+  add_subdirectory(pybind11)
+endif()
