--- a/Utils/CMakeLists.txt
+++ b/Utils/CMakeLists.txt
@@ -1,9 +1,16 @@
-FILE(GLOB_RECURSE headers "*.hpp" "*.h")
-FILE(GLOB_RECURSE sources *.cpp)
+FILE(GLOB my_utils_headers "*.hpp" "*.h")
+FILE(GLOB my_utils_sources "*.cpp")
+FILE(GLOB my_third_party_utils_headers "ThirdPartyUtils/*.hpp" "ThirdPartyUtils/*.h")
+FILE(GLOB my_third_party_utils_sources "ThirdPartyUtils/*.cpp")
 
-add_library (myUtils SHARED ${headers} ${sources})
-target_link_libraries(myUtils myYaml
-                              drake::drake)
+add_library(myUtils SHARED ${my_utils_headers} ${my_utils_sources})
+target_link_libraries(myUtils myYaml)
+
+if(USE_DRAKE)
+  add_library(myThirdPartyUtils SHARED ${my_third_party_utils_headers}
+                                       ${my_third_party_utils_sources})
+  target_link_libraries(myThirdPartyUtils drake::drake)
+endif()
 
 find_package(Threads REQUIRED)
 if(THREADS_HAVE_PTHREAD_ARG)
@@ -14,4 +21,10 @@ if(CMAKE_THREAD_LIBS_INIT)
 endif()
 
 install(TARGETS myUtils DESTINATION "${INSTALL_LIB_DIR}")
-install(FILES ${headers} DESTINATION "${INSTALL_INCLUDE_DIR}/Utils")
+install(FILES ${my_utils_headers} DESTINATION "${INSTALL_INCLUDE_DIR}/Utils")
+
+if(USE_DRAKE)
+  install(TARGETS myThirdPartyUtils DESTINATION "${INSTALL_LIB_DIR}")
+  install(FILES ${my_third_party_utils_headers} DESTINATION
+      "${INSTALL_INCLUDE_DIR}/Utils/ThirdPartyUtils")
+endif()
