under_balancing_debug

--- a/Config/Draco/TEST/BALANCING_TEST.yaml
+++ b/Config/Draco/TEST/BALANCING_TEST.yaml
@@ -1,8 +1,9 @@
-#initial_jpos: [0., -0.08, -1.05, 1.51, 0.85, 0., 0.08, -1.05, 1.51, 0.85]
 initial_jpos: [0., -0.08, -0.8, 1.6, 0.81, 0., 0.08, -0.8, 1.6, 0.81]
-jpos_initialization_time: 3.0
+#initial_jpos: [0., 0.0, -0.8, 1.6, 0.81, 0., 0.0, -0.8, 1.6, 0.81]
+jpos_initialization_time: 4.0
 
 body_height: 1.0
-body_lifting_time: 3.0
+body_lifting_time: 4.0
 
-body_ctrl_time: 10000.0
+interpolation_time: 0.2
+balancing_ctrl_time: 10000.0
