--- a/Config/Draco/INTERFACE.yaml
+++ b/Config/Draco/INTERFACE.yaml
@@ -1,5 +1,5 @@
-test_name: joint_test
-#test_name: body_test
+#test_name: joint_test
+test_name: body_test
 #test_name: walking_test
 #test_name: rl_walking_test
 #test_name: balancing_test
