body_under_task_jacobian

--- a/Config/Draco/INTERFACE.yaml
+++ b/Config/Draco/INTERFACE.yaml
@@ -1,6 +1,6 @@
 #test_name: joint_test
-#test_name: body_test
-test_name: walking_test
+test_name: body_test
+#test_name: walking_test
 #test_name: rl_walking_test
 #test_name: balancing_test
 
