--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -5,7 +5,8 @@ hanging_height: 0.83
 release_time: 7.9
 pulling_back_time: 2.0
 #pulling_back_distance: 0.068
-pulling_back_distance: 0
+pulling_back_distance: 0.088
+#pulling_back_distance: 0
 
 initial_configuration: [0, 0, -0.5, 1.8, 1.03, 0, 0, -0.5, 1.8, 1.03]
 
