--- a/Config/Draco/TEST/BODY_TEST.yaml
+++ b/Config/Draco/TEST/BODY_TEST.yaml
@@ -1,6 +1,6 @@
 #initial_jpos: [0., -0.08, -1.05, 1.51, 0.85, 0., 0.08, -1.05, 1.51, 0.85]
-#initial_jpos: [0., -0.08, -0.8, 1.6, 0.81, 0., 0.08, -0.8, 1.6, 0.81]
-initial_jpos: [0., 0., -0.8, 1.6, 0.81, 0., 0., -0.8, 1.6, 0.81]
+initial_jpos: [0., -0.08, -0.8, 1.6, 0.81, 0., 0.08, -0.8, 1.6, 0.81]
+#initial_jpos: [0., 0., -0.8, 1.6, 0.81, 0., 0., -0.8, 1.6, 0.81]
 jpos_initialization_time: 4.0
 
 body_height: 1.0
