--- a/Config/Draco/PLANNER/WALKING/VELOCITY_REVERSAL_PLANNER.yaml
+++ b/Config/Draco/PLANNER/WALKING/VELOCITY_REVERSAL_PLANNER.yaml
@@ -3,5 +3,8 @@ y_step_length_limit: [0.12, 0.75]
 
 com_velocity_limit: [0.0, 1.3]
 
-t_prime: [0.19, 0.19]
-kappa: [-0.15, -0.1]
+#t_prime: [0.19, 0.19]
+#kappa: [-0.15, -0.1]
+
+t_prime: [0.18, 0.18]
+kappa: [-0.2, -0.2]
