--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -3,8 +3,8 @@ is_record: false
 hanging_height: 0.83
 
 release_time: 7.9
+check_collision: true
 pulling_back_time: 2.0
-#pulling_back_distance: 0.068
 pulling_back_distance: 0.088
 #pulling_back_distance: 0
 
