--- a/Config/Draco/TEST/WALKING_TEST.yaml
+++ b/Config/Draco/TEST/WALKING_TEST.yaml
@@ -2,10 +2,15 @@ start_phase: 0
 
 initial_jpos: [0., -0.08, -0.8, 1.6, 0.81, 0., 0.08, -0.8, 1.6, 0.81]
 #initial_jpos: [0. , 0. , -0.8 , 1.6 , 0.81 , 0. , 0. , -0.8 , 1.6 , 0.81]
+
 #body_height: 1.0
 #com_height_for_omega: 0.77
+
 body_height: 0.95
-com_height_for_omega: 0.73
+com_height_for_omega: 0.74
+
+#body_height: 0.9
+#com_height_for_omega: 0.7
 
 jpos_initialization_time: 4.0
 com_lifting_time: 4.0
