--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,8 +33,8 @@ find_package(DART 6.5 REQUIRED COMPONENTS utils-urdf gui-osg CONFIG)
 include_directories(${DART_INCLUDE_DIRS})
 
 # Pybind11
-set(USE_PYBIND11 False)
-#set(USE_PYBIND11 True)
+#set(USE_PYBIND11 False)
+set(USE_PYBIND11 True)
 if(USE_PYBIND11)
   message("-- Enable Pybind11")
   find_package(PythonAnaconda)
