stepping & before optimizing swing motion

--- a/Config/Draco/LOW_LEVEL_CONFIG.yaml
+++ b/Config/Draco/LOW_LEVEL_CONFIG.yaml
@@ -10,11 +10,12 @@
 
 ####### Weak Gain
 
-jp_kp             : [30  , 70  , 70  , 70  , 9   , 30  , 70  , 70  , 70  , 9]
-jp_kd             : [2   , 4   , 4   , 4   , 0.4 , 2   , 4   , 4   , 4   , 0.4]
+jp_kp             : [30  , 70  , 70  , 70  , 4   , 30  , 70  , 70  , 70  , 4]
+jp_kd             : [2   , 4   , 4   , 4   , 0   , 2   , 4   , 4   , 4   , 0]
 t_kp              : [0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0]
 t_kd              : [0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0]
 en_auto_kd        : [1   , 1   , 1   , 1   , 1   , 1   , 1   , 1   , 1   , 1]
 en_dob            : [0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0]
-current_limit     : [5   , 7   , 19  , 22  , 5   , 5   , 7   , 19  , 22  , 5]
 temperature_limit : [110 , 110 , 110 , 110 , 110 , 110 , 110 , 110 , 110 , 110]
+current_limit     : [5   , 7   , 19  , 22  , 0.3   , 5   , 7   , 19  , 22  , 0.3]
+#current_limit     : [3   , 3   , 3  , 3  , 3   , 3   , 3   , 3  , 3  , 3]
