--- a/Config/Draco/SAFETY.yaml
+++ b/Config/Draco/SAFETY.yaml
@@ -1,5 +1,11 @@
-min_position    : [-0.76 , -0.47 , -1.2 , -100. , 0.79 , -0.71 , -0.92 , -1.2 , -100. , 0.79]
-max_position    : [0.72  , 0.92  , 1.08 , 1.95  , 2.33 , 0.79  , 0.47  , 1.08 , 1.95  , 2.33]
-max_velocity    : [10.   , 10.   , 10.  , 10.   , 10.  , 10.   , 10.   , 10.  , 10.   , 10.]
-max_trq         : [200.  , 200.  , 200. , 200.  , 200. , 200.  , 200.  , 200. , 200.  , 200.]
+#min_position    : [-0.76 , -0.47 , -1.2 , -0.2 , 0.64 , -0.71 , -0.92 , -1.2 , -0.2 , 0.64]
+#max_position    : [0.72  , 0.92  , 1.08 , 1.95  , 2.33 , 0.79  , 0.47  , 1.08 , 1.95  , 2.33]
+#max_velocity    : [10.   , 10.   , 10.  , 10.   , 10.  , 10.   , 10.   , 10.  , 10.   , 10.]
+#max_trq         : [200.  , 200.  , 200. , 200.  , 200. , 200.  , 200.  , 200. , 200.  , 200.]
+#max_temperature : [100.  , 100.  , 100. , 100.  , 100. , 100.  , 100.  , 100. , 100.  , 100.]
+
+min_position    : [-0.3 , -0.4 , -1.0 , -0.2 , 0.64 , -0.3 , -0.4 , -1.0 , -0.2 , 0.64]
+max_position    : [0.3  , 0.4  , 0.5 , 1.8  , 2.33 , 0.3  , 0.4  , 0.5 , 1.8  , 2.33]
+max_velocity    : [10.   , 10.   , 10.  , 10.   , 20.  , 10.   , 10.   , 10.  , 10.   , 20.]
+max_trq         : [200.  , 200.  , 200. , 300.  , 200. , 200.  , 200.  , 200. , 300.  , 200.]
 max_temperature : [100.  , 100.  , 100. , 100.  , 100. , 100.  , 100.  , 100. , 100.  , 100.]
