--- a/Config/Draco/CTRL/DOUBLE_CONTACT_TRANS_CTRL.yaml
+++ b/Config/Draco/CTRL/DOUBLE_CONTACT_TRANS_CTRL.yaml
@@ -1,5 +1,7 @@
-max_rf_z: 150
-min_rf_z: 2.5
+#max_rf_z: 150.0
+#min_rf_z: 2.5
+max_rf_z: 300.0
+min_rf_z: 5.0
 
-kp: [150, 150, 200, 200, 150, 150, 150, 200, 200, 150 ]
-kd: [7, 7, 10, 10, 7, 7, 7, 10, 10, 7 ]
+kp: [100 , 100 , 100 , 100 , 0 , 100 , 100 , 100 , 100 , 0 ]
+kd: [3   , 3   , 3   , 3   , 0 , 3   , 3   , 3   , 3   , 0  ]
