--- a/Config/Draco/INTERFACE.yaml
+++ b/Config/Draco/INTERFACE.yaml
@@ -1,11 +1,11 @@
 #test_name: joint_test
 #test_name: body_test
-#test_name: walking_test
+test_name: walking_test
 #test_name: balancing_test
-test_name: rl_walking_test
+#test_name: rl_walking_test
 
 jpos_max: [0.72, 0.92, 1.08, 1.95, 2.33, 0.79, 0.47, 1.08, 1.95, 2.33]
-jpos_min: [-0.76, -0.47, -1.2, -1., 0.79, -0.71, -0.92, -1.2, -1., 0.79]
+jpos_min: [-0.76, -0.47, -1.2, -1., 0.64, -0.71, -0.92, -1.2, -1., 0.64]
 
 jvel_max: [10., 10., 10., 10., 10., 10., 10., 10., 10., 10.]
 jvel_min: [-10., -10., -10., -10., -10., -10., -10., -10., -10., -10.]
