--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -2,7 +2,8 @@ is_record: false
 
 hanging_height: 0.83
 
-release_time: 7.9
+#release_time: 7.9
+release_time: 7000.9
 check_collision: true
 pulling_back_time: 2.0
 pulling_back_distance: 0.088
