--- a/Config/Draco/SAFETY.yaml
+++ b/Config/Draco/SAFETY.yaml
@@ -4,6 +4,7 @@
 #max_trq         : [200.  , 200.  , 200. , 200.  , 200. , 200.  , 200.  , 200. , 200.  , 200.]
 #max_temperature : [100.  , 100.  , 100. , 100.  , 100. , 100.  , 100.  , 100. , 100.  , 100.]
 
+# Conservative
 min_position    : [-0.3 , -0.4 , -1.0 , -0.2 , 0.64 , -0.3 , -0.4 , -1.0 , -0.2 , 0.64]
 max_position    : [0.3  , 0.4  , 0.5 , 1.8  , 2.33 , 0.3  , 0.4  , 0.5 , 1.8  , 2.33]
 max_velocity    : [10.   , 10.   , 10.  , 10.   , 20.  , 10.   , 10.   , 10.  , 10.   , 20.]
