--- a/Config/Draco/CTRL/LEFT_BODY_FOOT_PLANNING_CTRL.yaml
+++ b/Config/Draco/CTRL/LEFT_BODY_FOOT_PLANNING_CTRL.yaml
@@ -1,13 +1,13 @@
 planner_name: velocity_reversal_lipm
 swing_height: 0.12
-push_down_height: 0.005
+push_down_height: 0.001
 default_target_foot_location: [0.0, 0.11, 0.0]
 
-#kp: [ 150 , 200 , 150 , 200 , 150 , 150 , 200 , 150 , 150 , 150 ]
-#kd: [ 8   , 10  , 8   , 8   , 8   , 8   , 10  , 8   , 8   , 8 ]
+kp: [ 150 , 200 , 150 , 200 , 150 , 150 , 200 , 150 , 150 , 150 ]
+kd: [ 8   , 10  , 8   , 8   , 8   , 8   , 10  , 8   , 8   , 8 ]
 
-kp: [100 , 100 , 100 , 100 , 0 , 100 , 100 , 100 , 100 , 0 ]
-kd: [3   , 3   , 3   , 3   , 0 , 3   , 3   , 3   , 3   , 0  ]
+#kp: [100 , 100 , 100 , 100 , 0 , 100 , 100 , 100 , 100 , 0 ]
+#kd: [3   , 3   , 3   , 3   , 0 , 3   , 3   , 3   , 3   , 0  ]
 
-body_pt_offset: [0., 0.]
+body_pt_offset: [-0.07, -0.005]
 foot_landing_offset: [0., 0.]
