--- a/Config/Draco/PLANNER/WALKING/VELOCITY_REVERSAL_PLANNER.yaml
+++ b/Config/Draco/PLANNER/WALKING/VELOCITY_REVERSAL_PLANNER.yaml
@@ -1,7 +1,10 @@
-x_step_length_limit: [-0.5, 0.5]
-y_step_length_limit: [0.12, 0.75]
+x_step_length_limit: [-0.6, 0.6]
+y_step_length_limit: [0.15, 0.9]
 
 com_velocity_limit: [0.0, 1.3]
 
-t_prime: [0.13, 0.17]
-kappa: [-0.3, -0.2]
+#t_prime: [0.13, 0.17]
+#kappa: [-0.3, -0.2]
+
+t_prime: [0.2, 0.26]
+kappa: [-0.16, -0.15]
