--- a/Config/Draco/TEST/WALKING_TEST.yaml
+++ b/Config/Draco/TEST/WALKING_TEST.yaml
@@ -1,21 +1,26 @@
 start_phase: 0
 
-initial_jpos: [0., -0.08, -0.8, 1.6, 0.81, 0., 0.08, -0.8, 1.6, 0.81]
+initial_jpos: [0., -0.1, -0.8, 1.6, 0.81, 0., 0.08, -0.8, 1.6, 0.81]
 
-body_height: 0.98
-com_height_for_omega: 0.739
+body_height: 1.0
+#com_height_for_omega: 0.739
+com_height_for_omega: 1.0
 
-jpos_initialization_time: 4.0
-com_lifting_time: 4.0
+#jpos_initialization_time: 4.0
+#com_lifting_time: 4.0
+
+jpos_initialization_time: 2.0
+com_lifting_time: 2.0
+
 
 swing_time: 0.33
 st_transition_time: 0.03
 end_transition_time: 0.03
 stance_time: 0.01
 
-#replanning: true
-replanning: false
-transition_phase_mix_ratio: 0.2
+replanning: true
+#replanning: false
+transition_phase_mix_ratio: 0.0
 double_stance_mix_ratio: 0.0
-#contact_switch_check: true
-contact_switch_check: false
+contact_switch_check: true
+#contact_switch_check: false
