--- a/Config/Draco/TEST/JOINT_TEST.yaml
+++ b/Config/Draco/TEST/JOINT_TEST.yaml
@@ -1,9 +1,10 @@
-initial_jpos: [0., -0.08, -0.8, 1.6, 0.81, 0., 0.08, -0.8, 1.6, 0.81]
-#initial_jpos: [0.1, 0, -0.9, 1.6, 1.4, -0.1, 0, -0.9, 1.6, 1.4]
+#initial_jpos: [0., -0.08, -0.8, 1.6, 0.81, 0., 0.08, -0.8, 1.6, 0.81]
+initial_jpos: [0., -0.1, -0.8, 1.6, 0.81, 0., 0.08, -0.8, 1.6, 0.81]
+#initial_jpos: [0., -0.1, -0.8, 1.6, 1.25, 0., 0.08, -0.8, 1.6, 1.25]
 initialization_time: 3.0
 
 test_duration: 1000.32
 
-amplitude : [ 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 ]
-frequency : [ 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0.3 , 0.3 , 0 ]
-phase     : [ 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0   , 0   , 0 ]
+amplitude : [ 0 , 0 , 0 , 0 , 0.  , 0 , 0 , 0  , 0  , 0. ]
+frequency : [ 0 , 0 , 0 , 0 , 1.8 , 0 , 0 , 0. , 0. , 1.8 ]
+phase     : [ 0 , 0 , 0 , 0 , 0   , 0 , 0 , 0  , 0  , 0 ]
