--- a/Config/Draco/LOW_LEVEL_CONFIG.yaml
+++ b/Config/Draco/LOW_LEVEL_CONFIG.yaml
@@ -10,12 +10,14 @@
 
 ####### Weak Gain
 
-jp_kp             : [30  , 70  , 70  , 70  , 4   , 30  , 70  , 70  , 70  , 4]
-jp_kd             : [2   , 4   , 4   , 4   , 0   , 2   , 4   , 4   , 4   , 0]
+jp_kp             : [30  , 80  , 80  , 80  , 5   , 30  , 80  , 80  , 80  , 5]
+jp_kd             : [2   , 5   , 5   , 5   , 1   , 2   , 5   , 5   , 5   , 1]
 t_kp              : [0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0]
 t_kd              : [0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0]
-en_auto_kd        : [1   , 1   , 1   , 1   , 1   , 1   , 1   , 1   , 1   , 1]
+en_auto_kd        : [0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0]
 en_dob            : [0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0]
 temperature_limit : [110 , 110 , 110 , 110 , 110 , 110 , 110 , 110 , 110 , 110]
-current_limit     : [5   , 7   , 19  , 22  , 0.3   , 5   , 7   , 19  , 22  , 0.3]
-#current_limit     : [3   , 3   , 3  , 3  , 3   , 3   , 3   , 3  , 3  , 3]
+#current_limit     : [5   , 7   , 19  , 22  , 0.3 , 5   , 7   , 19  , 22  , 0.3]
+current_limit     : [8   , 20  , 19  , 22  , 3   , 8   , 20  , 19  , 22  , 3]
+
+#contact_thresold
