--- a/Config/Draco/PLANNER/WALKING/VELOCITY_REVERSAL_PLANNER.yaml
+++ b/Config/Draco/PLANNER/WALKING/VELOCITY_REVERSAL_PLANNER.yaml
@@ -1,10 +1,16 @@
-x_step_length_limit: [-0.6, 0.6]
-y_step_length_limit: [0.15, 0.9]
+#x_step_length_limit: [-0.6, 0.6]
+#y_step_length_limit: [0.15, 0.9]
+
+x_step_length_limit: [-0.15, 0.15]
+y_step_length_limit: [0.2, 0.5]
 
 com_velocity_limit: [0.0, 1.3]
 
 #t_prime: [0.13, 0.17]
 #kappa: [-0.3, -0.2]
 
-t_prime: [0.2, 0.26]
+#t_prime: [0.2, 0.26]
+#kappa: [-0.16, -0.15]
+
+t_prime: [0.2, 0.2]
 kappa: [-0.16, -0.15]
