--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -6,7 +6,10 @@ hanging_height: 0.83
 #release_time: 7.9
 release_time: 4.
 #release_time: 7000.9
+
 check_collision: true
+#check_collision: false
+
 pulling_back_time: 2.0
 pulling_back_distance: 0.088
 
