--- a/Config/Draco/LOW_LEVEL_CONFIG.yaml
+++ b/Config/Draco/LOW_LEVEL_CONFIG.yaml
@@ -10,14 +10,14 @@
 
 ####### Weak Gain
 
-jp_kp             : [30  , 80  , 80  , 80  , 5   , 30  , 80  , 80  , 80  , 5]
-jp_kd             : [2   , 5   , 5   , 5   , 1   , 2   , 5   , 5   , 5   , 1]
-t_kp              : [0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0]
-t_kd              : [0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0]
-en_auto_kd        : [0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0]
-en_dob            : [0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0   , 0]
-temperature_limit : [110 , 110 , 110 , 110 , 110 , 110 , 110 , 110 , 110 , 110]
-#current_limit     : [5   , 7   , 19  , 22  , 0.3 , 5   , 7   , 19  , 22  , 0.3]
-current_limit     : [8   , 20  , 19  , 22  , 3   , 8   , 20  , 19  , 22  , 3]
+jp_kp             : [30  , 80   , 80   , 80   , 5   , 30  , 80   , 80   , 80   , 5]
+jp_kd             : [2   , 5    , 5    , 5    , 1   , 2   , 5    , 5    , 5    , 1]
+t_kp              : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
+t_kd              : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
+en_auto_kd        : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
+en_dob            : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
+rotor_inertia     : [20. , 105. , 105. , 420. , 20. , 20. , 105. , 105. , 420. , 20.]
+temperature_limit : [110 , 110  , 110  , 110  , 110 , 110 , 110  , 110  , 110  , 110]
+current_limit     : [8   , 20   , 19   , 22   , 3   , 8   , 20   , 19   , 22   , 3]
 
 #contact_thresold
