--- a/Config/Draco/TEST/WALKING_TEST.yaml
+++ b/Config/Draco/TEST/WALKING_TEST.yaml
@@ -25,8 +25,8 @@ stance_time: 0.01
 #end_transition_time: 0.08
 #stance_time: 0.015
 
-replanning: true
-#replanning: false
+#replanning: true
+replanning: false
 transition_phase_mix_ratio: 0.0
 double_stance_mix_ratio: 0.0
 #contact_switch_check: true
