--- a/Config/Draco/CTRL/RIGHT_BODY_FOOT_PLANNING_CTRL.yaml
+++ b/Config/Draco/CTRL/RIGHT_BODY_FOOT_PLANNING_CTRL.yaml
@@ -1,13 +1,15 @@
 planner_name: velocity_reversal_lipm
 swing_height: 0.12
 push_down_height: 0.0
-default_target_foot_location: [0.0, -0.11, 0.0]
+default_target_foot_location: [-0.03, -0.11, 0.0]
 
 #kp: [ 150 , 150 , 150 , 150 , 5 , 150 , 150 , 200, 200 , 5 ]
 #kd: [ 8   , 8   , 8   , 8   , 0 , 8   , 8   , 10   , 10   , 0 ]
 
-kp: [100 , 100 , 100 , 100 , 5 , 100 , 100 , 100 , 100 , 5 ]
-kd: [4   , 4   , 4   , 4   , 0 , 4   , 4   , 4   , 4   , 0  ]
+kp: [100 , 150 , 150 , 150 , 5 , 100 , 250 , 250 , 200 , 5 ]
+kd: [4   , 6   , 6   , 6   , 0 , 4   , 8   , 8   , 8   , 0  ]
 
-body_pt_offset: [-0.07, 0.005]
+body_pt_offset: [-0.05, 0.0]
 foot_landing_offset: [0., 0.]
+
+fin_ankle: 1.3
