--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -4,8 +4,8 @@ num_steps_per_cycle: 30
 hanging_height: 0.83
 
 #release_time: 7.9
-release_time: 4.
-#release_time: 7000.9
+#release_time: 4.
+release_time: 7000.9
 
 check_collision: true
 #check_collision: false
