--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -4,8 +4,8 @@ num_steps_per_cycle: 30
 hanging_height: 0.83
 
 #release_time: 7.9
-#release_time: 4.
-release_time: 7000.9
+release_time: 4.
+#release_time: 7000.9
 
 check_collision: true
 #check_collision: false
@@ -19,5 +19,5 @@ control_configuration:
   #kp: [30 , 50 , 70 , 70 , 10 , 30 , 50 , 70 , 70 , 10]
   #kd: [3  , 5  , 7  , 7  , 1  , 3  , 5  , 7  , 7  , 1]
 
-  kp: [120 , 100 , 100 , 100 , 20 , 100 , 100 , 100 , 100 , 20]
-  kd: [3  , 5  , 7  , 7  , 1  , 3  , 5  , 7  , 7  , 1]
+  kp: [200 , 100 , 100 , 100 , 0   , 200 , 100 , 100 , 100 , 0]
+  kd: [20  , 7   , 7   , 7   , 0 , 20  , 7   , 7   , 7   , 0]
