--- a/Config/Draco/INTERFACE.yaml
+++ b/Config/Draco/INTERFACE.yaml
@@ -4,13 +4,16 @@ test_name: walking_test
 #test_name: balancing_test
 #test_name: rl_walking_test
 
-jpos_max: [0.72, 0.92, 1.08, 1.95, 2.33, 0.79, 0.47, 1.08, 1.95, 2.33]
-jpos_min: [-0.76, -0.47, -1.2, -1., 0.64, -0.71, -0.92, -1.2, -1., 0.64]
+jpos_min: [-0.6 , -0.4 , -1.15 , -0.2  , 0.64 , -0.6 , -0.4 , -1.15 , -0.2  , 0.64]
+jpos_max: [0.6  , 0.4  , 0.5   , 1.8   , 2.33 , 0.6  , 0.4  , 0.5   , 1.8   , 2.33]
 
 jvel_max: [10., 10., 10., 10., 10., 10., 10., 10., 10., 10.]
 jvel_min: [-10., -10., -10., -10., -10., -10., -10., -10., -10., -10.]
 
-jtrq_max: [200., 200., 200., 200., 200., 200., 200., 200., 200., 200.]
-jtrq_min: [-200., -200., -200., -200., -200., -200., -200., -200., -200., -200.]
+#jtrq_max: [200., 200., 200., 200., 200., 200., 200., 200., 200., 200.]
+#jtrq_min: [-200., -200., -200., -200., -200., -200., -200., -200., -200., -200.]
+
+jtrq_max: [200.  , 200.  , 200.  , 200.  , 20.  , 200.  , 200.  , 200.  , 200.  , 20.]
+jtrq_min: [-200. , -200. , -200. , -200. , -20. , -200. , -200. , -200. , -200. , -20.]
 
 max_temperature: [100., 100., 100., 100., 100., 100., 100., 100., 100., 100.]
