--- a/Config/Draco/CTRL/RIGHT_BODY_FOOT_PLANNING_CTRL.yaml
+++ b/Config/Draco/CTRL/RIGHT_BODY_FOOT_PLANNING_CTRL.yaml
@@ -1,15 +1,16 @@
 planner_name: velocity_reversal_lipm
 swing_height: 0.11
 push_down_height: 0.0
-default_target_foot_location: [0.0, -0.11, 0.0]
+default_target_foot_location: [-0.03, -0.11, 0.0]
 
-#kp: [ 150 , 150 , 150 , 150 , 5 , 150 , 150 , 200, 200 , 5 ]
-#kd: [ 8   , 8   , 8   , 8   , 0 , 8   , 8   , 10   , 10   , 0 ]
+kp: [80 , 150 , 150 , 150 , 5 , 80 , 150 , 150 , 150 , 5 ]
+kd: [3  , 8   , 8   , 3   , 0 , 3  , 8   , 8   , 3   , 0  ]
 
-kp: [100 , 150 , 150 , 150 , 5 , 100 , 250 , 250 , 200 , 5 ]
-kd: [4   , 6   , 6   , 6   , 0 , 4   , 8   , 8   , 8   , 0  ]
-
-body_pt_offset: [-0.04, 0.0]
+body_pt_offset: [0.06, 0.0]
 foot_landing_offset: [0., 0.]
 
-fin_ankle: 1.3
+fin_ankle: 1.4
+switch_vel_threshold: -2.8
+
+fin_foot_z_vel: -0.5
+fin_foot_z_acc: 5.0
