--- a/Config/Draco/TEST/WALKING_TEST.yaml
+++ b/Config/Draco/TEST/WALKING_TEST.yaml
@@ -2,8 +2,11 @@ start_phase: 0
 
 initial_jpos: [0., -0.1, -0.8, 1.6, 0.81, 0., 0.08, -0.8, 1.6, 0.81]
 
-body_height: 1.0
-com_height_for_omega: 0.9
+#body_height: 1.0
+#com_height_for_omega: 1.0
+
+body_height: 0.98
+com_height_for_omega: 1.0
 
 jpos_initialization_time: 2.0
 com_lifting_time: 2.0
